objects/tsaa__Session_Lobby_Invite__c.object
<CustomObject>
    <fields>
        <fullName>tsaa__AppointmentStatus__c</fullName>
        <label>Appointment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>CannotComplete</fullName>
                    <label>Cannot Complete</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tsaa__CustomerSessionLink__c</fullName>
        <label>Customer Session Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tsaa__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tsaa__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__LobbyLink__c</fullName>
        <label>Lobby Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__LoginAgent__c</fullName>
        <label>Login Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__RecordId__c</fullName>
        <externalId>true</externalId>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__SessionId__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tsaa__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>Session Lobby Invite</label>
    <listViews>
        <fullName>tsaa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Session Lobby Invite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Lobby Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>